ArchiveApiTypeContainer should properly load classes from modules
Instead of assuming that modules are represented as *.jmod, which is
only the case for a JDK but not for a JRE, the jrt file system should be
used.  In addition, jar files should  use the jar file system, to
uniformly handle both cases.  The JRT approach also allows loading all
the modules of the JDK/JRE not just the java.base module.  Classes from
the JDK will no longer be prefixed with classes.*.

https://github.com/eclipse-pde/eclipse.pde/issues/356